# Shurlix

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml.example  docker-compose-dev.yml  install-packages.sh  rustfmt.toml
.github/workflows/: release.yml
crates/db/: Cargo.toml
crates/db/migrations/2024-10-09-105022_create_domains/: down.sql  up.sql
crates/db/migrations/2024-10-09-105033_create_users/: up.sql
crates/db/migrations/2024-10-09-105044_create_links/: up.sql
crates/db/migrations/2024-10-09-105055_create_links/: up.sql
crates/db/migrations/2024-10-31-091852_create_email_verification/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  schema.rs
crates/db/src/models/: domain.rs  link.rs  mod.rs  user.rs  verification_tokens.rs
crates/frontend/: .gitignore  global.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/frontend/src/: index.tsx  lib.rs  style.scss
crates/frontend/src/components/: DomainSelector.tsx  Input.tsx  Modal.tsx  PaginatedTable.tsx  ProviderComposer.tsx  SliderCheck.tsx
crates/frontend/src/context/: ApiContext.tsx  ConfigContext.tsx  DomainContext.tsx  DomainRepositoryContext.tsx  LoginContext.tsx  RegisterContext.tsx  SetupContext.tsx  ThemeContext.tsx  contextUtils.ts  types.ts
crates/frontend/src/util/: checkUrlWithRetries.ts  cookies.ts  form.ts  misc.ts  validator.ts
crates/web-pages/: Cargo.toml
crates/web-pages/src/: index.rs  lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: asset.rs  common.rs  config.rs  config_old.rs  constants.rs  hostname_router.rs  main.rs  toml_config.rs  types.rs  util.rs
crates/web-server/src/extensions/: auth.rs  domain.rs
crates/web-server/src/routes/: api.rs
crates/web-server/src/routes/api/: config.rs  domains.rs  links.rs  mod.rs  setup.rs  user.rs
crates/web-server/src/services/: email.rs
crates/web-server/src/services/email/: mod.rs
crates/web-server/src/services/email/templates/: mod.rs  verification_email.rs
crates/web-server/src/types/: generic.rs  mod.rs  wrapped_duration.rs
crates/web-server/src/util/: jwt.rs  mod.rs
(+17 files in other folders)
