[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
db = { version = "0.1.0", path = "../db" }
tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
web-pages = { version = "0.1.0", path = "../web-pages" }
dioxus = "0.5.6"
dioxus-ssr = "0.5.6"
dotenvy = "0.15"
serde = "1.0.210"
rand = "0.8.5"
owo-colors = "4.1.0"
