[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
#build = "build.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio", "macros"] }
db = { version = "0.1.0", path = "../db" }
tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
dotenvy = "0.15"
serde = "1.0.210"
rand = "0.8.5"
owo-colors = "4.1.0"
rust-embed = "8.5.0"
mime = "0.3.17"
mime_guess = "=2.0.5"
regex = "1.11.0"
url = "2.5.2"
lazy_static = "1.5.0"
